<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowbbDB">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.alespero.expandablecardview.ExpandableCardView
                android:id="@+id/cardViewWHB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:animationDuration="300"
                app:expandOnClick="true"
                app:inner_view="@layout/list_layout_whb"
                app:startExpanded="false"
                app:title="@string/WHB" />


            <com.alespero.expandablecardview.ExpandableCardView
                android:id="@+id/cardViewPRBC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:animationDuration="300"
                app:expandOnClick="true"
                app:inner_view="@layout/list_layout_prbc"
                app:startExpanded="false"
                app:title="@string/PRBC" />

            <com.alespero.expandablecardview.ExpandableCardView
                android:id="@+id/cardViewPC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:animationDuration="300"
                app:expandOnClick="true"
                app:inner_view="@layout/list_layout_pc"
                app:startExpanded="false"
                app:title="@string/PC" />

            <com.alespero.expandablecardview.ExpandableCardView
                android:id="@+id/cardViewAHF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:animationDuration="300"
                app:expandOnClick="true"
                app:inner_view="@layout/list_layout_ahf"
                app:startExpanded="false"
                app:title="@string/AHF" />

            <com.alespero.expandablecardview.ExpandableCardView
                android:id="@+id/cardViewFFP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:animationDuration="300"
                app:expandOnClick="true"
                app:inner_view="@layout/list_layout_ffp"
                app:startExpanded="false"
                app:title="@string/FFP"

                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>